Added another notebook to describe BPnet.jl

--- a/1.Intro.ipynb
+++ b/1.Intro.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# BPnet- a generative NN to sample equilibrium configurations in Ising Model"
+    "# BPnet- prologue"
    ],
    "metadata": {}
   },
@@ -215,7 +215,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "For the red spin in the image, the set $s_{<i}$ includes all the black as well as the grey spins. However, the nearest neighbor Hamiltonian allows us to restrict the dependency field to the black spins alone since the information from black spins alone is enough to predict the unknown nearest neighbours of the red spin, which translates to the red spins itself. One can justify this claim by hand-waving and supposing a domino of nearest neighbor bonds from the red spins reachable only to the black spins or by rigorously calculating $\\widehat s_i$ by setting $q_\\theta(s) = p_B(s)$ in the autoregressive property formula. Either ways, this means calculating $\\widehat s_i$ involves an input smaller that O(N), hence the overall computational complexity of estimating $q_\\theta(s)$ is just O(N)! BPnet is designed to make use of this restricted dependency field for faster sampling of Boltzmann distribution of the Ising model."
+    "For the red spin in the image, the set $s_{<i}$ includes all the black as well as the grey spins. However, the nearest neighbor Hamiltonian allows us to restrict the dependency field to the black spins alone since the information from black spins alone is enough to predict the unknown nearest neighbours of the red spin, which translates to the red spins itself. One can justify this claim by hand-waving and supposing a domino of nearest neighbor bonds from the red spins reachable only to the black spins or by rigorously calculating $\\widehat s_i$ by setting $q_\\theta(s) = p_B(s)$ in the autoregressive property formula. Either ways, this means calculating $\\widehat s_i$ involves an input smaller that O(N), hence the overall computational complexity of estimating $q_\\theta(s)$ is just O(N)! BPnet is designed to make use of this restricted dependency field for faster sampling (described in more detail in notebook 2) of Boltzmann distribution of the Ising model. Additionally, we make sure that the only trainable layers or parameters in the design appear in the form of convolutional layers. This makes BPnet *size invariant*- in the sense it can act on lattices/input configurations of any size as long as it's bigger than the weight matrix sizes of the convolutional layers inside it! This allows us a great freedom of being able to train on small lattices while acting on larger ones!  "
    ],
    "metadata": {}
   }
