--- a/1.Intro.ipynb
+++ b/1.Intro.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "Ising model is a minimilastic toy model in physics for describing magnetic phase transitions. It consists of classical, binary valued ($\\pm 1$)spins on a crystal lattice (like square, triangular, cubic) and has the Hamiltonian:\n",
     "\n",
-    "$$ H_{\\text{ising}}(s) = J\\displaystyle\\sum_{<ij>} S_i.S_j - h\\displaystyle\\sum_j S_j$$\n",
+    "$$ H_{\\text{ising}}(s) = J\\displaystyle\\sum_{<ij>} S_i.S_j - h\\displaystyle\\sum_j S_j \\tag{1}$$\n",
     "\n",
     "Like any typical crystal lattice system, Ising model too has the property of translational invariance. We can enforce another discrete symmetry known as Z2 by setting h=0 so that flipping all spins conserves the Hamiltonian."
    ],
