--- a/2.Description.ipynb
+++ b/2.Description.ipynb
@@ -9,7 +9,7 @@
     "---\n",
     "Note:This section serves as a guide to what the module BPnetModel inside BPnet.jl implements with some slightly oversimplified examples and implementaions.\n",
     " \n",
-    "The overall network consists of several *blocks* (that we define as ConvBlock) consisting mainly of convolutional layers. Within a block, we have three stacks: left, right and main stacks. They process specific pieces of information to calculate $\\widehat s_i$ for every $i$. Recall that the Ising model distribution has a resticted dependency field at every position consisting of spins to the left in the same row and spins to the right in the row above. The left stack attacks the spins to the left with convolutions while the right stack attacks the spins to the right in the row above with convolutions. The outputs from both left and right stacks are combined in the main stack by adding and acting with convolutions of filter size 1. We also perform the gating operation mentioned in [this](https://arxiv.org/abs/1606.05328) paper inside the main stack. A simple example is illustrated in the following figure for a 5x5 input configuration. Note how padding with zeros is performed to compensate for absence of spins to the left or top-right at the boundary.\n",
+    "The overall network consists of several *blocks* (that we define as ConvBlock) consisting mainly of convolutional layers. Within a block, we have three stacks: left, right and main stacks. They process specific pieces of information to calculate $\\widehat s_i$ for every $i$. Recall that the Ising model distribution has a resticted dependency field at every position consisting of spins to the left in the same row and spins to the right in the row above. The left stack attacks the spins to the left with convolutions while the right stack attacks the spins to the right in the row above with convolutions. The outputs from both left and right stacks are combined in the main stack by adding and acting with convolutions of filter size 1. A simple example is illustrated in the following figure for a 5x5 input configuration. Note how padding with zeros is performed to compensate for absence of spins to the left or top-right at the boundary.\n",
     "\n",
     "![BPnet example](Figures/BPnet_sample.png) "
    ],
@@ -77,11 +77,7 @@
     "    x_r = layer.r_conv(x_r) #Convolution on x_r, right stack\n",
     "    x_m = x_l .+ x_r #Combining information in main stack\n",
     "    x_m = layer.m_conv(x_m)\n",
-    "\n",
-    "    x_m0 = tanh.(x_m[:, :, 1:end÷2, :]) #splitting x_m across channels dim\n",
-    "    x_m1 = σ.(x_m[:, :, (end÷2)+1:end, :])\n",
-    "    x_m = x_m0 .* x_m1 #Gating on x_m, main stack\n",
-    "\n",
+    "    \n",
     "    out = layer.m_conv2(x_m) #Further conv on x_m\n",
     "    return out\n",
     "end\n",
